# libnotify_basic

./: CMakeLists.txt
include/: notify.hpp
src/: notify.cpp
test-app/: CMakeLists.txt  main.cpp
